--- a/styles/base.css
+++ b/styles/base.css
@@ -1,33 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
-
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-:root {
-  /* Primary */
-  --blue-500: hsl(215, 51%, 70%);
-  --cyan-400: hsl(178, 100%, 50%);
-
-  /* Neutral */
-  --blue-950: hsl(217, 54%, 11%);
-  --blue-900: hsl(216, 50%, 16%);
-  --blue-800: hsl(215, 32%, 27%);
-  --white: hsl(0, 0%, 100%);
-
-  /* Font  */
-  --ff-outfit: "Outfit", sans-serif;
-  --fw-semiBold: 600;
-  --fw-light: 300;
+body {
+  font-family: var(--ff-primary);
+  font-size: var(--fs-base);
+  background-color: var(--clr-neutral-main-bg);
+  color: var(--clr-primary-soft-blue);
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  padding: 1.5rem;
 }
 
-body {
-  font-family: var(--ff-outfit);
-  font-size: 1.125rem;
-  color: var(--blue-500);
-  background-color: var(--blue-950);
-  padding: 1rem 2rem;
-  min-height: 100vh;
+img {
+  max-width: 100%;
+  display: block;
 }
