--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
 @import url("base.css");
-@import url("composition.css");
 @import url("blocks.css");
 @import url("utilities.css");
+@import url("variables.css");
